--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(particle_simulator LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 include_directories(includes/)
 
@@ -15,7 +14,6 @@ set(SRC
         src/json_handler.cpp
         src/negative.cpp
         src/normal.cpp
-        src/particle_simulator.cpp
         src/particle.cpp
         src/physics_engine.cpp
         src/positive.cpp
@@ -31,13 +29,15 @@ set(SRC
 find_package(Qt6 REQUIRED COMPONENTS Core)
 
 add_library(particle_simulator_dlib SHARED  ${SRC})
-target_link_libraries(particle_simulator_dlib PRIVATE Qt6::Core)
+target_link_libraries(particle_simulator_dlib PUBLIC Qt6::Core)
 
 add_library(particle_simulator_slib  ${SRC})
-target_link_libraries(particle_simulator_slib PRIVATE Qt6::Core)
+target_link_libraries(particle_simulator_slib PUBLIC Qt6::Core)
 
-# add_executable(particle_simulator  ${SRC})
-# target_link_libraries(particle_simulator PRIVATE Qt6::Core)
+# add_executable(particle_simulator  src/particle_simulator.cpp)
+# target_link_libraries(particle_simulator PUBLIC 
+#         Qt6::Core
+#         particle_simulator_dlib)
 
 find_package(GTest REQUIRED)
 add_subdirectory(tests/unit_tests) 
